# backend/src/domain/entities/User.ts
@@ -1,7 +1,0 @@
-export interface User {
-  id: string;
-  name: string;
-  age: number;
-  createdAt: Date;
-  updatedAt: Date;
-}
